syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.grpc.climatecontrolservice";
option java_outer_classname = "ClimateControlServiceImpl";

package ClimateControlService;

// The service definition.
// The server that you implement must extend the class  <servicename>ImplBase
// so in this example you will create a server class that extends ZooService1ImplBase

// ZooService 1 manages the temperature of various locations in the Zoo.
// There are thermostats in each enclosure that measure the temperature

// スマートホーム内の温度を管理するサービス
service ClimateControlService {

  // ダッシュボードに使うため、指定した部屋の温度のストリームを受け取る
  rpc MonitorTemperature(RoomLocation) returns (stream Temperature) {}

  // 今現在の部屋の温度を取得する
  rpc CurrentTemperature(RoomLocation) returns (Temperature) {}

  // クライアントが送った温度の一覧から、平均温度を計算する
  rpc AverageTemperature(stream Temperature) returns (Temperature) {}

  // BiDi: 部屋ごとに温度を送って、サーバーがそれぞれの現在温度を返す（週6で実装）
  // rpc AllRoomsTemperature(stream RoomLocation) returns (stream Temperature) {}
}

// 部屋の場所を表すメッセージ
message RoomLocation {
  string roomName = 1;
}

// 温度データ
message Temperature {
  double value = 1;
}
 

